--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -14,8 +15,8 @@
             <a>Web Studio</a>
             <!--site menu-->
             <ul>
-                <li><a href="/studio">Студия</a></li>
-                <li><a href="/portfolio">Портфолио</a></li>
+                <li><a href="/index.html">Студия</a></li>
+                <li><a href="/portfolio.html">Портфолио</a></li>
                 <li><a href="/contact">Контакты</a></li>
             </ul>
         </nav>
