Added footer to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,5 +26,14 @@
             </ul>
         </div>
     </header>
+    <main></main>
+    <footer>
+        <address>
+            <p>Web Studio</p>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+        </address>
+    </footer>
 </body>
 </html>
