--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
+
 <body>
     <header>
         <nav>
@@ -26,7 +28,109 @@
             </ul>
         </div>
     </header>
-    <main></main>
+    <main>
+        <!--Sorter-->
+        <section>
+            <ul>
+                <li>Все</li>
+                <li>Веб-сайты</li>
+                <li>Приложения</li>
+                <li>Дизайн</li>
+                <li>Маркетинг</li>
+            </ul>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-01.jpg" alt="Технокряк" />
+                <figcaption>
+                    <h3>Технокряк</h3>
+                </figcaption>
+                <figcaption>Веб-сайт</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-02.jpg" alt="Постер New Orlean vs Golden Star" />
+                <figcaption>
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                </figcaption>
+                <figcaption>Дизайн</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-03.jpg" alt="Ресторан Seafood" />
+                <figcaption>
+                    <h3>Ресторан Seafood</h3>
+                </figcaption>
+                <figcaption>Приложение</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-04.jpg" alt="Проект Prime" />
+                <figcaption>
+                    <h3>Проект Prime</h3>
+                </figcaption>
+                <figcaption>Маркетинг</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-05.jpg" alt="Проект Boxes" />
+                <figcaption>
+                    <h3>Проект Boxes</h3>
+                </figcaption>
+                <figcaption>Приложение</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-06.jpg" alt="Inspiration has no Borders" />
+                <figcaption>
+                    <h3>Inspiration has no Borders</h3>
+                </figcaption>
+                <figcaption>Веб-сайт</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-07.jpg" alt="Издание Limited Edition" />
+                <figcaption>
+                    <h3>Издание Limited Edition</h3>
+                </figcaption>
+                <figcaption>Дизайн</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-08.jpg" alt="Проект LAB" />
+                <figcaption>
+                    <h3>Проект LAB</h3>
+                </figcaption>
+                <figcaption>Маркетинг</figcaption>
+            </figure>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./img/portfolio-projects-img-09.jpg" alt="Growing Business" />
+                <figcaption>
+                    <h3>Growing Business</h3>
+                </figcaption>
+                <figcaption>Приложение</figcaption>
+            </figure>
+        </section>
+
+    </main>
     <footer>
         <address>
             <p>Web Studio</p>
@@ -36,4 +140,5 @@
         </address>
     </footer>
 </body>
+
 </html>
