Added fonts to all text content and logo

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav>
             <!--site logo-->
-            <a>Web Studio</a>
+            <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
             <ul>
-                <li><a href="/index.html">Студия</a></li>
-                <li><a href="/portfolio.html">Портфолио</a></li>
-                <li><a href="/contact">Контакты</a></li>
+                <li class="main-menu"><a href="/index.html">Студия</a></li>
+                <li class="main-menu"><a href="/portfolio.html">Портфолио</a></li>
+                <li class="main-menu"><a href="/contact">Контакты</a></li>
             </ul>
         </nav>
         <!--contacts-->
@@ -133,7 +135,7 @@
     </main>
     <footer>
         <address>
-            <p>Web Studio</p>
+            <p><span class="logo"><span class="part-logo">Web</span>Studio</span></p>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
             <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
