--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <!--site logo-->
             <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
-            <ul>
-                <li><a href="/index.html">Студия</a></li>
-                <li><a href="/portfolio.html">Портфолио</a></li>
-                <li><a href="/contact">Контакты</a></li>
+            <ul class="listTab">
+                <li class="active"><a class="main-menu" href="/index.html"><span>Студия</span></a></li>
+                <li><a class="main-menu" href="/portfolio.html"><span>Портфолио</span></a></li>
+                <li><a class="main-menu" href="/contact"><span class="main-menu">Контакты</span></a></li>
             </ul>
         </nav>
         <!--contacts-->
