--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,11 @@
             <!--site logo-->
             <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
-            <ul>
-                <li class="main-menu"><a href="/index.html">Студия</a></li>
-                <li class="main-menu"><a href="/portfolio.html">Портфолио</a></li>
-                <li class="main-menu"><a href="/contact">Контакты</a></li>
+            <ul class="listTab">
+                <li><a class="main-menu" href="/index.html"><span>Студия</span></a></li>
+                <li class="active"><a class="main-menu" href="/portfolio.html"><span class="active">Портфолио</span></a>
+                </li>
+                <li><a class="main-menu" href="/contact"><span class="main-menu">Контакты</span></a></li>
             </ul>
         </nav>
         <!--contacts-->
