Update main menu

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
             <ul class="listTab">
-                <li class="active"><a class="main-menu" href="/index.html"><span>Студия</span></a></li>
-                <li><a class="main-menu" href="/portfolio.html"><span>Портфолио</span></a></li>
-                <li><a class="main-menu" href="/contact"><span class="main-menu">Контакты</span></a></li>
+                <li class="active"><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
+                <li><a class="main-menu" href="./portfolio.html"><span>Портфолио</span></a></li>
+                <li><a class="main-menu" href="./contact"><span class="main-menu">Контакты</span></a></li>
             </ul>
         </nav>
         <!--contacts-->
