--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,11 @@
             <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
             <ul class="listTab">
-                <li><a class="main-menu" href="/index.html"><span>Студия</span></a></li>
-                <li class="active"><a class="main-menu" href="/portfolio.html"><span class="active">Портфолио</span></a>
+                <li><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
+                <li class="active"><a class="main-menu" href="./portfolio.html"><span
+                            class="active">Портфолио</span></a>
                 </li>
-                <li><a class="main-menu" href="/contact"><span class="main-menu">Контакты</span></a></li>
+                <li><a class="main-menu" href="./contact"><span class="main-menu">Контакты</span></a></li>
             </ul>
         </nav>
         <!--contacts-->
