Update main menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!--site menu-->
             <ul class="listTab">
                 <li class="active"><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
-                <li><a class="main-menu" href="../portfolio.html"><span>Портфолио</span></a></li>
+                <li><a class="main-menu" href="./portfolio.html"><span>Портфолио</span></a></li>
                 <li><a class="main-menu" href="./contact"><span class="main-menu">Контакты</span></a></li>
             </ul>
         </nav>
