--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
     </main>
     <footer>
-        <address>
+        <address class="address-box">
             <p><span class="logo"><span class="part-logo">Web</span>Studio</span></p>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
