--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <!--site logo-->
             <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
-            <ul class="listTab">
+            <ul class="list-tab">
                 <li><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
                 <li class="active"><a class="main-menu" href="./portfolio.html"><span
                             class="active">Портфолио</span></a>
@@ -35,7 +35,7 @@
     <main>
         <!--Sorter-->
         <section>
-            <ul>
+            <ul class="sorter">
                 <li>Все</li>
                 <li>Веб-сайты</li>
                 <li>Приложения</li>
