Added styles to h1-h4, button, li

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <!--site logo-->
             <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
-            <ul class="listTab">
+            <ul class="list-tab">
                 <li class="active"><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
-                <li><a class="main-menu" href="./portfolio.html"><span>Портфолио</span></a></li>
+                <li><a class="main-menu" href="./portfolio.html"><span class="active">Портфолио</span></a>
+                </li>
                 <li><a class="main-menu" href="./contact"><span class="main-menu">Контакты</span></a></li>
             </ul>
         </nav>
