--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,11 @@
         <!--Sorter-->
         <section>
             <ul class="sorter">
-                <li>Все</li>
-                <li>Веб-сайты</li>
-                <li>Приложения</li>
-                <li>Дизайн</li>
-                <li>Маркетинг</li>
+                <li class="sorter-item">Все</li>
+                <li class="sorter-item">Веб-сайты</li>
+                <li class="sorter-item">Приложения</li>
+                <li class="sorter-item">Дизайн</li>
+                <li class="sorter-item">Маркетинг</li>
             </ul>
         </section>
 
