Added root to file style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
 
 </head>
 
@@ -15,7 +16,7 @@
     <header>
         <nav>
             <!--site logo-->
-            <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
+            <a href="./index.html"><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
             <ul class="list-tab">
                 <li class="active"><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
@@ -108,7 +109,7 @@
         </section>
     </main>
     <footer>
-        <address class="address-box">
+        <address>
             <p><span class="logo"><span class="part-logo">Web</span>Studio</span></p>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
