added styles to navigation

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <!--site logo-->
-            <a><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
+            <a href="./index.html"><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <!--site menu-->
             <ul class="list-tab">
                 <li><a class="main-menu" href="./index.html"><span>Студия</span></a></li>
@@ -28,9 +28,9 @@
         </nav>
         <!--contacts-->
         <div>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contacts-bloc">
+                <li><a class="contacts-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
