--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </nav>
         <!--contacts-->
         <div>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contacts-bloc">
+                <li><a class="contacts-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
