--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     </main>
     <footer>
         <address>
-            <p><span class="logo"><span class="part-logo">Web</span>Studio</span></p>
+            <a href="./index.html"><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
             <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
         </address>
     </footer>
