--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
     <footer>
         <address>
             <p><span class="logo"><span class="part-logo">Web</span>Studio</span></p>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
             <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
             <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
         </address>
