--- a/index.html
+++ b/index.html
@@ -109,13 +109,15 @@
         </section>
     </main>
     <footer>
-        <address>
-            <a href="./index.html"><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <p><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-        </address>
-    </footer>
+        <footer>
+            <address>
+                <a href="./index.html"><span class="logo"><span class="part-logo">Web</span>Studio</span></a>
+                <p><span class="address-text">г. Киев, пр-т Леси Украинки, 26</span></p>
+                <p><a class="link" href="mailto:info@devstudio.com"><span
+                            class="address-text-link">info@devstudio.com</span></a></p>
+                <p><a href="tel:+380961111111"><span class="address-text-link">+38 096 111 11 11</span></a></p>
+            </address>
+        </footer>
 </body>
 
 </html>
